--- a/css/index.css
+++ b/css/index.css
@@ -1,31 +1,43 @@
-*{
-    padding:0;
+* {
+    padding: 0;
     margin: 0;
     list-style: none;
 }
-.ban{
+
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.ban {
     width: 100%;
     height: 4rem;
 }
-.ban>img{
+
+.ban > img {
     width: 100%;
     height: 100%;
 }
-.con{
+
+.con {
     width: 100%;
     height: 100%;
 }
-form{
+
+form {
     width: 100%;
     height: 100%;
 }
-input{
+
+input {
     width: 100%;
     height: .6rem;
     margin-top: .1rem;
 }
-.foot{
+
+.foot {
     width: 100%;
     height: 2rem;
-    background-color: rgba(255,126,122,.2);
+    background-color: rgba(255, 126, 122, .2);
 }
